--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "pick me pick me pick me up!",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.dev.js",
-    "build:prod": "webpack --config webpack.config.prod.js -p"
+    "start": "webpack --config webpack.config.dev.js -w",
+    "build": "webpack --config webpack.config.prod.js -p"
   },
   "repository": {
     "type": "git",
@@ -19,12 +18,20 @@
     "url": "https://github.com/weooops/pickme-web/issues"
   },
   "homepage": "https://github.com/weooops/pickme-web#readme",
+  "dependencies": {
+    "es6-promise": "^4.2.4",
+    "express": "^4.16.2",
+    "express-es6-template-engine": "^2.0.3",
+    "isomorphic-fetch": "^2.2.1",
+    "normalize.css": "^8.0.0"
+  },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.18",
+    "copy-webpack-plugin": "^4.4.2",
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -36,6 +43,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "postcss-flexbugs-fixes": "^3.3.0",
@@ -44,7 +52,6 @@
     "style-loader": "^0.20.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1",
     "webpack-manifest-plugin": "^1.3.2"
   }
 }
